2002-04-05  Matti Aarnio  <mea@zmailer.org>

	* transports/libta/ctlopen.c:
	    The RP data block is not initialized completely in all cases,
	    which causes occasional bugs.  Doing   memset()  for it at
	    first, then filling in non-zero values.

2002-03-08  Matti Aarnio  <mea@zmailer.org>

	* transports/reroute/reroute.c, transports/reroute/Makefile.in,
	  transports/Makefile.in:
	    Added a new Transport Agent -- "reroute", e.g. send given
	    messages back to router.  This is intended for quite special
	    (and intimate) interaction with the Scheduler.

	* transports/mailbox/mailbox.c, man/mailbox.8:
	    Add a few subprocess execution environment variables
	    which carry more of message meta-data, than previously.

	* transports/libta/ctlopen.c:
	    Pass the  INFROM= DNS metadata into   rp->infrom  field.

	* transports/hold/hold.c:
	    Detect "channel error" type messages properly.
	    Pass more of DSN Metadata to outgoing message envelope.
	    Output "env-end\n" meta-header after the envelope headers.

	* transports/expirer/expirer.c:
	    Update the comments a bit.

	* router/rfc822.c, libc/mail.c, libc/sfmail.c:
	    Take precautions (just in case) "the next-stage notify"
	    socket closes, and causes a SIGPIPE to be sent to relevant
	    process.

	* proto/scheduler.conf.in:
	    Remove "-8" from a few prototype command lines.

2002-02-22  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.h, utils/makedb/makedb.c,
	  utils/makedb/dblook.c:
	    System with only SleepyCat DB 3.x in it (not 2.x, nor 1.x)
	    didn't support it properly.  Oops..

	* configure.in, libc/Makefile.in, man/Makefile.in:
	    Found out, why  --libdir=,  --includedir=, and
	    --mandir=  options didn't have effect.  D'uh..

2002-02-20  Matti Aarnio  <mea@zmailer.org>

	* router/rfc822.c:
	    Remove few earlier added ":" characters from places
	    where those went into report form filenames.
	    My blunder :-(

2002-02-18  Matti Aarnio  <mea@zmailer.org>
